Added other ecommerce features to docs

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ version: v1.3.1
             <p class="docs-text">Grounded in <a href="#sass" class="docs-link">Sass</a>, Timber provides you with a barebone set of styles that you can quickly put your designer touch on.</p>
           </div>
         </div>
+        <h4 class="docs-h4">Other Ecommerce Features</h4>
+        <p class="docs-text"><a href="http://docs.shopify.com/manual/configuration/store-customization/advanced-navigation/add-a-reorder-drop-down-menu-to-a-collection-page">Collection sorting</a>, <a href="https://dev.twitter.com/docs/cards/types/product-card">Twitter Cards</a>, <a href="http://www.shopify.com/blog/14862781-pinterest-rich-pins-now-automatically-enabled-for-shopify-merchants">Pinterest Rich Pins</a>, and <a href="https://schema.org/Product">SEO-friendly Scheme.org tags</a>.</p>
 
         <hr>
 
