Links to different ajax cart method demos

--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@ Output:
         ===================================== -->
         <h2 class="doc-title js-title" id="ajax-cart"><strong>4.1 </strong>Ajaxify Cart</h2>
         <p class="docs-note">Being teleported to the cash register in a grocery store after picking up a can of soup doesn't make a ton of sense, so why should your customer end up on a <strong class="docs-strong">/cart</strong> page online?</p>
-        <p class="docs-text">Using the Ajaxify Cart plugin allows a user to add a product to their cart without leaving the current page. The cart will appear as a drawer from the top of the page, a modal, or an inline confirmation.</p>
+        <p class="docs-text">Using the Ajaxify Cart plugin allows a user to add a product to their cart without leaving the current page. The cart will appear as a <a href="https://timber-demo.myshopify.com/products/ricky-straight-super-t-mens-jean?method=drawer" class="docs-link">drawer</a> from the top of the page, a <a href="https://timber-demo.myshopify.com/products/ricky-straight-super-t-mens-jean?method=modal" class="docs-link">modal</a>, or an <a href="https://timber-demo.myshopify.com/products/ricky-straight-super-t-mens-jean?method=flip" class="docs-link">inline confirmation</a>.</p>
         <p class="docs-text"><strong class="docs-strong">Note:</strong> cart.liquid is still a required template and its markup structures the cart in the drawer/modal.</p>
 
         <ul class="tabs">
@@ -1155,7 +1155,7 @@ ajaxifyShopify.init({ [options] })
                 <td>drawer</td>
                 <td>
                   <p>The type of cart you want to enable.</p>
-                  <p>Options: <strong class="docs-strong">drawer</strong>, <strong class="docs-strong">modal</strong>, and <strong class="docs-strong">flip</strong></p>
+                  <p>Options: <a href="https://timber-demo.myshopify.com/products/ricky-straight-super-t-mens-jean?method=drawer" class="docs-link">drawer</a>, <a href="https://timber-demo.myshopify.com/products/ricky-straight-super-t-mens-jean?method=modal" class="docs-link">modal</a>, and <a href="https://timber-demo.myshopify.com/products/ricky-straight-super-t-mens-jean?method=flip" class="docs-link">flip</a></p>
                 </td>
               </tr>
               <tr>
