Add ajax cart method to callback data docs

--- a/index.html
+++ b/index.html
@@ -1273,6 +1273,7 @@ ajaxifyShopify.init({ [options] })
                   An object is returned with the values:
                   <ul>
                     <li><code>is_visible: true/false</code></li>
+                    <li><code>method: drawer/modal/flip</code></li>
                   </ul>
                 </td>
               </tr>
