Changed reference to icomoon font importing

--- a/index.html
+++ b/index.html
@@ -1740,7 +1740,7 @@ jQuery(function($) {
           Icon Font
         ===================================== -->
         <h2 class="doc-title styleguide-title" id="icons"><strong>5.6 </strong>Icon Font</h2>
-        <p class="docs-text">Timber offers a basic icon font for social and payment icons. Import <strong class="docs-strong">icons.svg</strong> into <a href="http://icomoon.io/app">IcoMoon</a> to make any changes.</p>
+        <p class="docs-text">Timber offers a basic icon font for social and payment icons. Import <strong class="docs-strong">assets/icons.json</strong> into <a href="http://icomoon.io/app">IcoMoon</a> to make any changes to the set.</p>
         <p class="docs-text">These icons are <a href="http://filamentgroup.com/lab/bulletproof_icon_fonts.html">bulletproof</a>, meaning they can have text fallbacks when <code>@font-face</code> isn't supported.</p>
 
         <ul class="tabs">
