Basic reset, move prettyprint to a partial

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@ version: v1.3.2
           WHO IS THIS FOR
         ===================================== -->
         <h2 class="doc-title gettingstarted-title" id="who-for"><strong>1.1 </strong>Who Is This For</h2>
-        <p class="docs-note">Timber is a front-end framework which makes building Shopify themes quick and easy. It can be used by theme creators of any skill level for themes of any scope.</p>
-        <p class="docs-text">Seasoned pros and newbies alike can benefit from the starter templates, liquid markup, modules, and CSS frameworks provided in Timber.</p>
+        <p class="docs-text">Timber is a front-end framework which makes building Shopify themes quick and easy. It can be used by theme creators of any skill level for themes of any scope. Seasoned pros and newbies alike can benefit from the starter templates, liquid markup, modules, and CSS frameworks provided in Timber.</p>
 
         <hr>
 
