Adjust spacing and margins

--- a/index.html
+++ b/index.html
@@ -1647,8 +1647,7 @@ jQuery(function($) {
           Icon Font
         ===================================== -->
         <h2 class="doc-title styleguide-title" id="icons"><strong>5.6 </strong>Icon Font</h2>
-        <p class="docs-text">Timber offers a basic icon font for social and payment icons. Import <strong class="docs-strong">assets/icons.json</strong> into <a href="http://icomoon.io/app">IcoMoon</a> to make any changes to the set.</p>
-        <p class="docs-text">These icons are <a href="http://filamentgroup.com/lab/bulletproof_icon_fonts.html">bulletproof</a>, meaning they can have text fallbacks when <code>@font-face</code> isn't supported.</p>
+        <p class="docs-text">Timber offers a basic icon font for social and payment icons. Import <strong class="docs-strong">assets/icons.json</strong> into <a href="http://icomoon.io/app">IcoMoon</a> to make any changes to the set. These icons are <a href="http://filamentgroup.com/lab/bulletproof_icon_fonts.html">bulletproof</a>, meaning they can have text fallbacks when <code>@font-face</code> isn't supported.</p>
 
         <div id="icons-example">
           <p>Payment Icons</p>
@@ -1739,8 +1738,6 @@ jQuery(function($) {
             </li>
           </ul>
 
-          <hr class="hr--small">
-
           <p>Social Icons</p>
           <ul class="inline-list icon-font-demo">
             <li>
@@ -1804,8 +1801,6 @@ jQuery(function($) {
               </span>
             </li>
           </ul>
-
-          <hr class="hr--small">
 
           <p>General Icons</p>
           <ul class="inline-list icon-font-demo">
