Added i18n blurb to docs

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ version: v2.0.0
           WHAT COMES WITH TIMBER
         ===================================== -->
         <h2 class="doc-title gettingstarted-title" id="comes-with"><strong>1.2 </strong>What is Included</h2>
-        <div class="grid">
+        <div class="grid-uniform">
           <div class="grid__item one-third small--one-whole">
             <h4 class="docs-h4">Required Templates</h4>
             <p class="docs-text">Every template your store needs is included in one handy place, so no more sticky notes with checklists on your desk.</p>
@@ -81,9 +81,15 @@ version: v2.0.0
             <h4 class="docs-h4">CSS Framework</h4>
             <p class="docs-text">Grounded in <a href="#sass" class="docs-link">Sass</a>, Timber provides you with a barebone set of styles that you can quickly put your designer touch on.</p>
           </div>
+          <div class="grid__item one-third small--one-whole">
+            <h4 class="docs-h4">Internationalization</h4>
+            <p class="docs-text">Timber allows developers and merchants to create and edit new languages for their needs. <a href="http://docs.shopify.com/themes/theme-development/translations" class="docs-link">Learn more about internationalization</a>.</p>
+          </div>
+          <div class="grid__item one-third small--one-whole">
+            <h4 class="docs-h4">Other Ecommerce Features</h4>
+            <p class="docs-text"><a href="http://docs.shopify.com/manual/configuration/store-customization/advanced-navigation/add-a-reorder-drop-down-menu-to-a-collection-page" class="docs-link">Collection sorting</a>, <a href="https://dev.twitter.com/docs/cards/types/product-card" class="docs-link">Twitter Cards</a>, <a href="http://www.shopify.com/blog/14862781-pinterest-rich-pins-now-automatically-enabled-for-shopify-merchants" class="docs-link">Pinterest Rich Pins</a>, and <a href="https://schema.org/Product" class="docs-link">SEO-friendly Scheme.org tags</a>.</p>
+          </div>
         </div>
-        <h4 class="docs-h4">Other Ecommerce Features</h4>
-        <p class="docs-text"><a href="http://docs.shopify.com/manual/configuration/store-customization/advanced-navigation/add-a-reorder-drop-down-menu-to-a-collection-page" class="docs-link">Collection sorting</a>, <a href="https://dev.twitter.com/docs/cards/types/product-card" class="docs-link">Twitter Cards</a>, <a href="http://www.shopify.com/blog/14862781-pinterest-rich-pins-now-automatically-enabled-for-shopify-merchants" class="docs-link">Pinterest Rich Pins</a>, and <a href="https://schema.org/Product" class="docs-link">SEO-friendly Scheme.org tags</a>.</p>
 
         <hr class="hr--docshr">
 
