--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ version: v2.0.0
           </div>
           <div class="grid__item one-third small--one-whole">
             <h4 class="docs-h4">Internationalization</h4>
-            <p class="docs-text">Timber allows developers and merchants to create and edit new languages for their needs. <a href="http://docs.shopify.com/themes/theme-development/translations" class="docs-link">Learn more about internationalization</a>.</p>
+            <p class="docs-text">Timber leverages Shopify's translation engine to let any developer or merchant easily create their own theme language. <a href="http://docs.shopify.com/themes/theme-development/translations" class="docs-link">Learn more about theme internationalization</a>.</p>
           </div>
           <div class="grid__item one-third small--one-whole">
             <h4 class="docs-h4">Other Ecommerce Features</h4>
