Second hyphen in btn--secondary docs

--- a/index.html
+++ b/index.html
@@ -1467,7 +1467,7 @@ jQuery(function($) {
               <form action="#" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" class="input-group">
                 <input type="email" value="" placeholder="Email address" name="EMAIL" id="mail" class="input-group-field">
                 <span class="input-group-btn">
-                  <input type="submit" class="btn-secondary" value="Subscribe" name="subscribe" id="subscribe">
+                  <input type="submit" class="btn--secondary" value="Subscribe" name="subscribe" id="subscribe">
                 </span>
               </form>
             </div>
@@ -1488,7 +1488,7 @@ jQuery(function($) {
 &lt;form action="#" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" class="input-group"&gt;
   &lt;input type="email" value="" placeholder="Email address" name="EMAIL" id="mail" class="input-group-field"&gt;
   &lt;span class="input-group-btn"&gt;
-    &lt;input type="submit" class="btn-secondary" value="Subscribe" name="subscribe" id="subscribe"&gt;
+    &lt;input type="submit" class="btn--secondary" value="Subscribe" name="subscribe" id="subscribe"&gt;
   &lt;/span&gt;
 &lt;/form&gt;
 </pre>
@@ -1508,8 +1508,8 @@ jQuery(function($) {
             <a href="#" class="btn btn--small">Small Default Button</a>
           </p>
           <p>
-            <a href="#" class="btn-secondary">Secondary Button</a>
-            <a href="#" class="btn-secondary btn--small">Small Secondary Button</a>
+            <a href="#" class="btn--secondary">Secondary Button</a>
+            <a href="#" class="btn--secondary btn--small">Small Secondary Button</a>
           </p>
           <p>
             <a href="#" class="btn disabled">Disabled Button</a>
@@ -1526,8 +1526,8 @@ jQuery(function($) {
 &lt;a href="#" class="btn"&gt;Default Button&lt;/a&gt;
 &lt;a href="#" class="btn btn--small"&gt;Small Default Button&lt;/a&gt;
 &lt;!-- Secondary --&gt;
-&lt;a href="#" class="btn-secondary"&gt;Secondary Button&lt;/a&gt;
-&lt;a href="#" class="btn-secondary btn--small"&gt;Small Default Button&lt;/a&gt;
+&lt;a href="#" class="btn--secondary"&gt;Secondary Button&lt;/a&gt;
+&lt;a href="#" class="btn--secondary btn--small"&gt;Small Default Button&lt;/a&gt;
 &lt;!-- Disabled --&gt;
 &lt;a href="#" class="btn disabled"&gt;Disabled Button&lt;/a&gt;
 &lt;a href="#" class="btn disabled btn--small"&gt;Small Disabled Button&lt;/a&gt;
