Updated icon set in docs

--- a/index.html
+++ b/index.html
@@ -1774,6 +1774,24 @@ jQuery(function($) {
                 <span class="fallback-text">X</span>
               </div>
             </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-plus"></span>
+                <span class="fallback-text">+/span>
+              </div>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-minus"></span>
+                <span class="fallback-text">-</span>
+              </div>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-hamburger"></span>
+                <span class="fallback-text">Menu</span>
+              </div>
+            </li>
           </ul>
           </ul>
         </div>
@@ -1941,6 +1959,24 @@ jQuery(function($) {
     &lt;div class="icon-fallback-text"&gt;
       &lt;span class="icon icon-x"&gt;&lt;/span&gt;
       &lt;span class="fallback-text"&gt;X&lt;/span&gt;
+    &lt;/div&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-plus"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;+&lt;/span&gt;
+    &lt;/div&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-minus"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;-&lt;/span&gt;
+    &lt;/div&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-hamburger"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Menu&lt;/span&gt;
     &lt;/div&gt;
   &lt;/li&gt;
 &lt;/ul&gt;
