Updated desktop editor link

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ git clone https://github.com/Shopify/Timber.git
           </div>
           <div class="grid__item one-half small--one-whole">
             <h4 class="docs-h4">Desktop Theme Editor</h4>
-            <p class="docs-text">If you prefer a beautiful interface, use the <a href="https://github.com/Shopify/shopify_theme" class="docs-link">Desktop Theme Editor</a> and start managing all of your theme assets.</p>
+            <p class="docs-text">If you prefer a beautiful interface, use the <a href="https://apps.shopify.com/desktop-theme-editor" class="docs-link">Desktop Theme Editor</a> and start managing all of your theme assets.</p>
           </div>
         </div>
 
